<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProductManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="productmanager">Product Manager</string>
    <string name="addproducttext">Add Product</string>
    <string name="viewproducttext">View Product</string>
    <string name="addproductdetail">Add Product Detail</string>
    <string name="productidlabel">Product ID</string>
    <string name="productnamelabel">Product Name</string>
    <string name="productpricelabel">Product Price</string>
    <string name="save">Save</string>
    <string name="productdetail">Product Detail</string>
    <string name="totalproductno">Total Product</string>
    <string name="idproduct">Product ID:</string>
    <string name="nameproduct">Product Name:</string>
    <string name="priceproduct">Product Price:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updateproduct">Update Product</string>
    <string name="oldname">Product  Name</string>
    <string name="oldprice">Product Price</string>
    <string name="upbtn">Update Product</string>

</resources>
