<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/headerone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/productmanager"
        android:textSize="25sp" />

    <Button
        android:id="@+id/addproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="addProduct"
        android:text="@string/addproducttext" />

    <Button
        android:id="@+id/viewproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addproduct"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="viewProduct"
        android:text="@string/viewproducttext" />

</RelativeLayout>
